# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("./scripts/build/ninja/vars.gni")

generated_typescript_modules = []

all_typescript_module_sources = [
  "bindings/BreakpointManager.js",
  "bindings/CSSWorkspaceBinding.js",
  "bindings/CompilerScriptMapping.js",
  "bindings/ContentProviderBasedProject.js",
  "bindings/DebuggerLanguagePlugins.js",
  "bindings/DebuggerWorkspaceBinding.js",
  "bindings/DefaultScriptMapping.js",
  "bindings/FileUtils.js",
  "bindings/IgnoreListManager.js",
  "bindings/LiveLocation.js",
  "bindings/NetworkProject.js",
  "bindings/PresentationConsoleMessageHelper.js",
  "bindings/ResourceMapping.js",
  "bindings/ResourceScriptMapping.js",
  "bindings/ResourceUtils.js",
  "bindings/SASSSourceMapping.js",
  "bindings/StylesSourceMapping.js",
  "bindings/TempFile.js",
  "browser_sdk/ContrastCheckTrigger.js",
  "browser_sdk/IssuesManager.js",
  "browser_sdk/LogManager.js",
  "browser_sdk/MarkdownHelpers.js",
  "browser_sdk/RelatedIssue.js",
  "browser_sdk/SourceFrameIssuesManager.js",
  "color_picker/ContrastDetails.js",
  "color_picker/ContrastInfo.js",
  "color_picker/ContrastOverlay.js",
  "color_picker/Spectrum.js",
  "common/App.js",
  "common/AppProvider.js",
  "common/Base64.js",
  "common/CharacterIdMap.js",
  "common/Color.js",
  "common/ColorUtils.js",
  "common/Console.js",
  "common/Debouncer.js",
  "common/EventTarget.js",
  "common/JavaScriptMetaData.js",
  "common/Lazy.js",
  "common/Linkifier.js",
  "common/Object.js",
  "common/ParsedURL.js",
  "common/Progress.js",
  "common/QueryParamHandler.js",
  "common/ResourceType.js",
  "common/Revealer.js",
  "common/Runnable.js",
  "common/SegmentedRange.js",
  "common/SettingRegistration.js",
  "common/Settings.js",
  "common/SimpleHistoryManager.js",
  "common/StringOutputStream.js",
  "common/TextDictionary.js",
  "common/Throttler.js",
  "common/Trie.js",
  "common/WasmDisassembly.js",
  "common/Worker.js",
  "component_helpers/component-server-setup.js",
  "component_helpers/directives.js",
  "component_helpers/get-stylesheet.js",
  "component_helpers/set-css-property.js",
  "components/ImagePreview.js",
  "components/JSPresentationUtils.js",
  "components/Linkifier.js",
  "components/Reload.js",
  "components/TargetDetachedDialog.js",
  "cookie_table/CookiesTable.js",
  "data_grid/DataGrid.js",
  "data_grid/ShowMoreDataGridNode.js",
  "data_grid/SortableDataGrid.js",
  "data_grid/ViewportDataGrid.js",
  "diff/DiffWrapper.js",
  "diff/diff_match_patch.js",
  "dom_extension/DOMExtension.js",
  "extensions/ExtensionAPI.js",
  "extensions/ExtensionPanel.js",
  "extensions/ExtensionServer.js",
  "extensions/ExtensionTraceProvider.js",
  "extensions/ExtensionView.js",
  "extensions/LanguageExtensionEndpoint.js",
  "formatter/FormatterWorkerPool.js",
  "formatter/ScriptFormatter.js",
  "formatter/SourceFormatter.js",
  "formatter_worker/AcornTokenizer.js",
  "formatter_worker/CSSFormatter.js",
  "formatter_worker/CSSRuleParser.js",
  "formatter_worker/ESTreeWalker.js",
  "formatter_worker/FormattedContentBuilder.js",
  "formatter_worker/FormatterWorker.js",
  "formatter_worker/HTMLFormatter.js",
  "formatter_worker/HTMLOutline.js",
  "formatter_worker/IdentityFormatter.js",
  "formatter_worker/JavaScriptFormatter.js",
  "formatter_worker/JavaScriptOutline.js",
  "generated/ARIAProperties.js",
  "generated/InspectorBackendCommands.js",
  "generated/SupportedCSSProperties.js",
  "har_importer/HARFormat.js",
  "har_importer/HARImporter.js",
  "heap_snapshot_model/HeapSnapshotModel.js",
  "heap_snapshot_worker/AllocationProfile.js",
  "heap_snapshot_worker/HeapSnapshot.js",
  "heap_snapshot_worker/HeapSnapshotLoader.js",
  "heap_snapshot_worker/HeapSnapshotWorkerDispatcher.js",
  "host/InspectorFrontendHost.js",
  "host/InspectorFrontendHostAPI.js",
  "host/Platform.js",
  "host/ResourceLoader.js",
  "host/UserMetrics.js",
  "i18n/i18nImpl.js",
  "i18n/i18nTypes.js",
  "inline_editor/BezierEditor.js",
  "inline_editor/BezierUI.js",
  "inline_editor/CSSAngle.js",
  "inline_editor/CSSAngleEditor.js",
  "inline_editor/CSSAngleSwatch.js",
  "inline_editor/CSSAngleUtils.js",
  "inline_editor/CSSShadowEditor.js",
  "inline_editor/CSSShadowModel.js",
  "inline_editor/CSSVarSwatch.js",
  "inline_editor/ColorSwatch.js",
  "inline_editor/FontEditor.js",
  "inline_editor/FontEditorUnitConverter.js",
  "inline_editor/FontEditorUtils.js",
  "inline_editor/SwatchPopoverHelper.js",
  "inline_editor/Swatches.js",
  "input/InputModel.js",
  "input/InputTimeline.js",
  "inspector_main/InspectorMain.js",
  "inspector_main/RenderingOptions.js",
  "issues/AffectedBlockedByResponseView.js",
  "issues/AffectedCookiesView.js",
  "issues/AffectedElementsView.js",
  "issues/AffectedElementsWithLowContrastView.js",
  "issues/AffectedHeavyAdView.js",
  "issues/AffectedResourcesView.js",
  "issues/AffectedSharedArrayBufferIssueDetailsView.js",
  "issues/AffectedTrustedWebActivityIssueDetailsView.js",
  "issues/CSPViolationsListView.js",
  "issues/CSPViolationsView.js",
  "issues/ComboBoxOfCheckBoxes.js",
  "issues/CorsIssueDetailsView.js",
  "issues/IssueAggregator.js",
  "issues/IssueRevealer.js",
  "issues/IssueView.js",
  "issues/IssuesPane.js",
  "issues/MarkdownImage.js",
  "issues/MarkdownImagesMap.js",
  "issues/MarkdownIssueDescription.js",
  "issues/MarkdownLink.js",
  "issues/MarkdownLinksMap.js",
  "issues/MarkdownView.js",
  "javascript_metadata/JavaScriptMetadata.js",
  "javascript_metadata/NativeFunctions.js",
  "js_main/JsMain.js",
  "legacy_test_runner/test_runner/TestRunner.js",
  "linear_memory_inspector/LinearMemoryInspector.js",
  "linear_memory_inspector/LinearMemoryInspectorController.js",
  "linear_memory_inspector/LinearMemoryInspectorPane.js",
  "linear_memory_inspector/LinearMemoryInspectorUtils.js",
  "linear_memory_inspector/LinearMemoryNavigator.js",
  "linear_memory_inspector/LinearMemoryValueInterpreter.js",
  "linear_memory_inspector/LinearMemoryViewer.js",
  "linear_memory_inspector/ValueInterpreterDisplay.js",
  "linear_memory_inspector/ValueInterpreterDisplayUtils.js",
  "linear_memory_inspector/ValueInterpreterSettings.js",
  "main/ExecutionContextSelector.js",
  "main/MainImpl.js",
  "main/SimpleApp.js",
  "node_main/NodeConnectionsPanel.js",
  "node_main/NodeMain.js",
  "object_ui/CustomPreviewComponent.js",
  "object_ui/JavaScriptAutocomplete.js",
  "object_ui/JavaScriptREPL.js",
  "object_ui/ObjectPopoverHelper.js",
  "object_ui/ObjectPropertiesSection.js",
  "object_ui/RemoteObjectPreviewFormatter.js",
  "panels/accessibility/ARIAAttributesView.js",
  "panels/accessibility/ARIAMetadata.js",
  "panels/accessibility/AXBreadcrumbsPane.js",
  "panels/accessibility/AccessibilityNodeView.js",
  "panels/accessibility/AccessibilitySidebarView.js",
  "panels/accessibility/AccessibilityStrings.js",
  "panels/accessibility/AccessibilitySubPane.js",
  "panels/accessibility/SourceOrderView.js",
  "panels/animation/AnimationGroupPreviewUI.js",
  "panels/animation/AnimationModel.js",
  "panels/animation/AnimationScreenshotPopover.js",
  "panels/animation/AnimationTimeline.js",
  "panels/animation/AnimationUI.js",
  "panels/application/AppManifestView.js",
  "panels/application/ApplicationCacheItemsView.js",
  "panels/application/ApplicationCacheModel.js",
  "panels/application/ApplicationPanelCacheSection.js",
  "panels/application/ApplicationPanelSidebar.js",
  "panels/application/ApplicationPanelTreeElement.js",
  "panels/application/BackgroundServiceModel.js",
  "panels/application/BackgroundServiceView.js",
  "panels/application/CookieItemsView.js",
  "panels/application/DOMStorageItemsView.js",
  "panels/application/DOMStorageModel.js",
  "panels/application/DatabaseModel.js",
  "panels/application/DatabaseQueryView.js",
  "panels/application/DatabaseTableView.js",
  "panels/application/FrameDetailsView.js",
  "panels/application/IndexedDBModel.js",
  "panels/application/IndexedDBViews.js",
  "panels/application/OpenedWindowDetailsView.js",
  "panels/application/ResourcesPanel.js",
  "panels/application/ServiceWorkerCacheViews.js",
  "panels/application/ServiceWorkerUpdateCycleView.js",
  "panels/application/ServiceWorkersView.js",
  "panels/application/StackTrace.js",
  "panels/application/StorageItemsView.js",
  "panels/application/StorageView.js",
  "panels/application/TrustTokensView.js",
  "panels/browser_debugger/CSPViolationBreakpointsSidebarPane.js",
  "panels/browser_debugger/CategorizedBreakpointsSidebarPane.js",
  "panels/browser_debugger/DOMBreakpointsSidebarPane.js",
  "panels/browser_debugger/EventListenerBreakpointsSidebarPane.js",
  "panels/browser_debugger/ModuleUIStrings.js",
  "panels/browser_debugger/ObjectEventListenersSidebarPane.js",
  "panels/browser_debugger/XHRBreakpointsSidebarPane.js",
  "panels/changes/ChangesHighlighter.js",
  "panels/changes/ChangesSidebar.js",
  "panels/changes/ChangesTextEditor.js",
  "panels/changes/ChangesView.js",
  "panels/console/ConsoleContextSelector.js",
  "panels/console/ConsoleFilter.js",
  "panels/console/ConsolePanel.js",
  "panels/console/ConsolePinPane.js",
  "panels/console/ConsolePrompt.js",
  "panels/console/ConsoleSidebar.js",
  "panels/console/ConsoleView.js",
  "panels/console/ConsoleViewMessage.js",
  "panels/console/ConsoleViewport.js",
  "panels/console_counters/IssueCounter.js",
  "panels/console_counters/WarningErrorCounter.js",
  "panels/coverage/CoverageDecorationManager.js",
  "panels/coverage/CoverageListView.js",
  "panels/coverage/CoverageModel.js",
  "panels/coverage/CoverageView.js",
  "panels/css_overview/CSSOverviewCompletedView.js",
  "panels/css_overview/CSSOverviewController.js",
  "panels/css_overview/CSSOverviewModel.js",
  "panels/css_overview/CSSOverviewPanel.js",
  "panels/css_overview/CSSOverviewProcessingView.js",
  "panels/css_overview/CSSOverviewSidebarPanel.js",
  "panels/css_overview/CSSOverviewStartView.js",
  "panels/css_overview/CSSOverviewUnusedDeclarations.js",
  "panels/developer_resources/DeveloperResourcesListView.js",
  "panels/developer_resources/DeveloperResourcesView.js",
  "panels/elements/AccessibilityTreeUtils.js",
  "panels/elements/AccessibilityTreeView.js",
  "panels/elements/Adorner.js",
  "panels/elements/AdornerManager.js",
  "panels/elements/AdornerSettingsPane.js",
  "panels/elements/CSSPropertyIconResolver.js",
  "panels/elements/ClassesPaneWidget.js",
  "panels/elements/ColorSwatchPopoverIcon.js",
  "panels/elements/ComputedStyleModel.js",
  "panels/elements/ComputedStyleProperty.js",
  "panels/elements/ComputedStyleTrace.js",
  "panels/elements/ComputedStyleWidget.js",
  "panels/elements/DOMLinkifier.js",
  "panels/elements/DOMPath.js",
  "panels/elements/ElementStatePaneWidget.js",
  "panels/elements/ElementsBreadcrumbs.js",
  "panels/elements/ElementsBreadcrumbsUtils.js",
  "panels/elements/ElementsPanel.js",
  "panels/elements/ElementsPanelLink.js",
  "panels/elements/ElementsSidebarPane.js",
  "panels/elements/ElementsTreeElement.js",
  "panels/elements/ElementsTreeElementHighlighter.js",
  "panels/elements/ElementsTreeOutline.js",
  "panels/elements/EventListenersWidget.js",
  "panels/elements/FlexboxEditor.js",
  "panels/elements/FlexboxEditorWidget.js",
  "panels/elements/ImagePreviewPopover.js",
  "panels/elements/InspectElementModeController.js",
  "panels/elements/LayoutPane.js",
  "panels/elements/LayoutPaneUtils.js",
  "panels/elements/LayoutSidebarPane.js",
  "panels/elements/MarkerDecorator.js",
  "panels/elements/MetricsSidebarPane.js",
  "panels/elements/NodeStackTraceWidget.js",
  "panels/elements/NodeText.js",
  "panels/elements/PlatformFontsWidget.js",
  "panels/elements/PropertiesWidget.js",
  "panels/elements/PropertyNameCategories.js",
  "panels/elements/StylePropertyHighlighter.js",
  "panels/elements/StylePropertyTreeElement.js",
  "panels/elements/StylesSidebarPane.js",
  "panels/emulation/AdvancedApp.js",
  "panels/emulation/DeviceModeModel.js",
  "panels/emulation/DeviceModeToolbar.js",
  "panels/emulation/DeviceModeView.js",
  "panels/emulation/DeviceModeWrapper.js",
  "panels/emulation/DevicesSettingsTab.js",
  "panels/emulation/EmulatedDevices.js",
  "panels/emulation/InspectedPagePlaceholder.js",
  "panels/emulation/LocationsSettingsTab.js",
  "panels/emulation/MediaQueryInspector.js",
  "panels/emulation/ModuleUIStrings.js",
  "panels/emulation/SensorsView.js",
  "panels/emulation/StructuredHeaders.js",
  "panels/emulation/UserAgentMetadata.js",
  "panels/event_listeners/EventListenersUtils.js",
  "panels/event_listeners/EventListenersView.js",
  "panels/help/HelpImpl.js",
  "panels/help/ReleaseNoteText.js",
  "panels/help/ReleaseNoteView.js",
  "panels/layer_viewer/LayerDetailsView.js",
  "panels/layer_viewer/LayerTreeOutline.js",
  "panels/layer_viewer/LayerViewHost.js",
  "panels/layer_viewer/Layers3DView.js",
  "panels/layer_viewer/PaintProfilerView.js",
  "panels/layer_viewer/TransformController.js",
  "panels/layers/LayerPaintProfilerView.js",
  "panels/layers/LayerTreeModel.js",
  "panels/layers/LayersPanel.js",
  "panels/lighthouse/LighthouseController.js",
  "panels/lighthouse/LighthousePanel.js",
  "panels/lighthouse/LighthouseProtocolService.js",
  "panels/lighthouse/LighthouseReportRenderer.js",
  "panels/lighthouse/LighthouseReportSelector.js",
  "panels/lighthouse/LighthouseReporterTypes.js",
  "panels/lighthouse/LighthouseStartView.js",
  "panels/lighthouse/LighthouseStatusView.js",
  "panels/lighthouse/RadioSetting.js",
  "panels/media/EventDisplayTable.js",
  "panels/media/EventTimelineView.js",
  "panels/media/MainView.js",
  "panels/media/MediaModel.js",
  "panels/media/PlayerDetailView.js",
  "panels/media/PlayerListView.js",
  "panels/media/PlayerMessagesView.js",
  "panels/media/PlayerPropertiesView.js",
  "panels/media/TickingFlameChart.js",
  "panels/media/TickingFlameChartHelpers.js",
  "panels/mobile_throttling/MobileThrottlingSelector.js",
  "panels/mobile_throttling/NetworkPanelIndicator.js",
  "panels/mobile_throttling/NetworkThrottlingSelector.js",
  "panels/mobile_throttling/ThrottlingManager.js",
  "panels/mobile_throttling/ThrottlingPresets.js",
  "panels/mobile_throttling/ThrottlingSettingsTab.js",
  "panels/network/BinaryResourceView.js",
  "panels/network/BlockedURLsPane.js",
  "panels/network/EventSourceMessagesView.js",
  "panels/network/HARWriter.js",
  "panels/network/NetworkConfigView.js",
  "panels/network/NetworkDataGridNode.js",
  "panels/network/NetworkFrameGrouper.js",
  "panels/network/NetworkItemView.js",
  "panels/network/NetworkLogView.js",
  "panels/network/NetworkLogViewColumns.js",
  "panels/network/NetworkManageCustomHeadersView.js",
  "panels/network/NetworkOverview.js",
  "panels/network/NetworkPanel.js",
  "panels/network/NetworkSearchScope.js",
  "panels/network/NetworkTimeCalculator.js",
  "panels/network/NetworkWaterfallColumn.js",
  "panels/network/RequestCookiesView.js",
  "panels/network/RequestHTMLView.js",
  "panels/network/RequestHeadersView.js",
  "panels/network/RequestInitiatorView.js",
  "panels/network/RequestPreviewView.js",
  "panels/network/RequestResponseView.js",
  "panels/network/RequestTimingView.js",
  "panels/network/RequestTrustTokensView.js",
  "panels/network/ResourceWebSocketFrameView.js",
  "panels/network/SignedExchangeInfoView.js",
  "panels/performance_monitor/PerformanceMonitor.js",
  "panels/profiler/BottomUpProfileDataGrid.js",
  "panels/profiler/CPUProfileFlameChart.js",
  "panels/profiler/CPUProfileView.js",
  "panels/profiler/ChildrenProvider.js",
  "panels/profiler/HeapProfileView.js",
  "panels/profiler/HeapProfilerPanel.js",
  "panels/profiler/HeapSnapshotDataGrids.js",
  "panels/profiler/HeapSnapshotGridNodes.js",
  "panels/profiler/HeapSnapshotProxy.js",
  "panels/profiler/HeapSnapshotView.js",
  "panels/profiler/HeapTimelineOverview.js",
  "panels/profiler/IsolateSelector.js",
  "panels/profiler/LiveHeapProfileView.js",
  "panels/profiler/ModuleUIStrings.js",
  "panels/profiler/ProfileDataGrid.js",
  "panels/profiler/ProfileHeader.js",
  "panels/profiler/ProfileLauncherView.js",
  "panels/profiler/ProfileSidebarTreeElement.js",
  "panels/profiler/ProfileTypeRegistry.js",
  "panels/profiler/ProfileView.js",
  "panels/profiler/ProfilesPanel.js",
  "panels/profiler/TopDownProfileDataGrid.js",
  "panels/protocol_monitor/ProtocolMonitor.js",
  "perf_ui/ChartViewport.js",
  "perf_ui/FilmStripView.js",
  "perf_ui/FlameChart.js",
  "perf_ui/GCActionDelegate.js",
  "perf_ui/LineLevelProfile.js",
  "perf_ui/LiveHeapProfile.js",
  "perf_ui/NetworkPriorities.js",
  "perf_ui/OverviewGrid.js",
  "perf_ui/PieChart.js",
  "perf_ui/TimelineGrid.js",
  "perf_ui/TimelineOverviewPane.js",
  "persistence/Automapping.js",
  "persistence/EditFileSystemView.js",
  "persistence/FileSystemWorkspaceBinding.js",
  "persistence/IsolatedFileSystem.js",
  "persistence/IsolatedFileSystemManager.js",
  "persistence/NetworkPersistenceManager.js",
  "persistence/PersistenceActions.js",
  "persistence/PersistenceImpl.js",
  "persistence/PersistenceUtils.js",
  "persistence/PlatformFileSystem.js",
  "persistence/WorkspaceSettingsTab.js",
  "platform/UIString.js",
  "platform/array-utilities.js",
  "platform/date-utilities.js",
  "platform/keyboard-utilities.js",
  "platform/map-utilities.js",
  "platform/number-utilities.js",
  "platform/set-utilities.js",
  "platform/string-utilities.js",
  "platform/typescript-utilities.js",
  "platform/utilities.js",
  "protocol_client/InspectorBackend.js",
  "protocol_client/NodeURL.js",
  "quick_open/CommandMenu.js",
  "quick_open/FilteredListWidget.js",
  "quick_open/HelpQuickOpen.js",
  "quick_open/QuickInput.js",
  "quick_open/QuickOpen.js",
  "quick_open/QuickPick.js",
  "recorder/Conditions.js",
  "recorder/RecorderModel.js",
  "recorder/RecordingEventHandler.js",
  "recorder/RecordingFileSystem.js",
  "recorder/RecordingScriptWriter.js",
  "recorder/RecordingSession.js",
  "recorder/Steps.js",
  "render_coordinator/RenderCoordinator.js",
  "root/Runtime.js",
  "screencast/InputModel.js",
  "screencast/ScreencastApp.js",
  "screencast/ScreencastView.js",
  "sdk/AccessibilityModel.js",
  "sdk/CPUProfileDataModel.js",
  "sdk/CPUProfilerModel.js",
  "sdk/CSSFontFace.js",
  "sdk/CSSMatchedStyles.js",
  "sdk/CSSMedia.js",
  "sdk/CSSMetadata.js",
  "sdk/CSSModel.js",
  "sdk/CSSProperty.js",
  "sdk/CSSPropertyParser.js",
  "sdk/CSSRule.js",
  "sdk/CSSStyleDeclaration.js",
  "sdk/CSSStyleSheetHeader.js",
  "sdk/ChildTargetManager.js",
  "sdk/CompilerSourceMappingContentProvider.js",
  "sdk/Connections.js",
  "sdk/ConsoleModel.js",
  "sdk/ConsoleModelTypes.js",
  "sdk/ContentSecurityPolicyIssue.js",
  "sdk/Cookie.js",
  "sdk/CookieModel.js",
  "sdk/CookieParser.js",
  "sdk/CorsIssue.js",
  "sdk/CrossOriginEmbedderPolicyIssue.js",
  "sdk/DOMDebuggerModel.js",
  "sdk/DOMModel.js",
  "sdk/DebuggerModel.js",
  "sdk/EmulationModel.js",
  "sdk/FilmStripModel.js",
  "sdk/FrameAssociated.js",
  "sdk/FrameManager.js",
  "sdk/HARLog.js",
  "sdk/HeapProfilerModel.js",
  "sdk/HeavyAdIssue.js",
  "sdk/IOModel.js",
  "sdk/IsolateManager.js",
  "sdk/Issue.js",
  "sdk/IssuesModel.js",
  "sdk/LayerTreeBase.js",
  "sdk/LogModel.js",
  "sdk/LowTextContrastIssue.js",
  "sdk/MixedContentIssue.js",
  "sdk/NetworkLog.js",
  "sdk/NetworkManager.js",
  "sdk/NetworkRequest.js",
  "sdk/OverlayColorGenerator.js",
  "sdk/OverlayModel.js",
  "sdk/OverlayPersistentHighlighter.js",
  "sdk/PageResourceLoader.js",
  "sdk/PaintProfiler.js",
  "sdk/PerformanceMetricsModel.js",
  "sdk/ProfileTreeModel.js",
  "sdk/RemoteObject.js",
  "sdk/Resource.js",
  "sdk/ResourceTreeModel.js",
  "sdk/RuntimeModel.js",
  "sdk/SDKModel.js",
  "sdk/SameSiteCookieIssue.js",
  "sdk/ScreenCaptureModel.js",
  "sdk/Script.js",
  "sdk/SecurityOriginManager.js",
  "sdk/ServerTiming.js",
  "sdk/ServiceWorkerCacheModel.js",
  "sdk/ServiceWorkerManager.js",
  "sdk/SharedArrayBufferIssue.js",
  "sdk/SourceMap.js",
  "sdk/SourceMapManager.js",
  "sdk/TracingManager.js",
  "sdk/TracingModel.js",
  "sdk/TrustedWebActivityIssue.js",
  "sdk/WebAuthnModel.js",
  "search/SearchConfig.js",
  "search/SearchResultsPane.js",
  "search/SearchView.js",
  "security/SecurityModel.js",
  "security/SecurityPanel.js",
  "settings/FrameworkIgnoreListSettingsTab.js",
  "settings/KeybindsSettingsTab.js",
  "settings/SettingsScreen.js",
  "snippets/ModuleUIStrings.js",
  "snippets/ScriptSnippetFileSystem.js",
  "snippets/SnippetsQuickOpen.js",
  "source_frame/BinaryResourceViewFactory.js",
  "source_frame/FontView.js",
  "source_frame/ImageView.js",
  "source_frame/JSONView.js",
  "source_frame/PreviewFactory.js",
  "source_frame/ResourceSourceFrame.js",
  "source_frame/SourceCodeDiff.js",
  "source_frame/SourceFrame.js",
  "source_frame/SourcesTextEditor.js",
  "source_frame/XMLView.js",
  "sources/AddSourceMapURLDialog.js",
  "sources/BreakpointEditDialog.js",
  "sources/CSSPlugin.js",
  "sources/CallStackSidebarPane.js",
  "sources/CoveragePlugin.js",
  "sources/DebuggerPausedMessage.js",
  "sources/DebuggerPlugin.js",
  "sources/EditingLocationHistoryManager.js",
  "sources/FilePathScoreFunction.js",
  "sources/FilteredUISourceCodeListProvider.js",
  "sources/GoToLineQuickOpen.js",
  "sources/GutterDiffPlugin.js",
  "sources/InplaceFormatterEditorAction.js",
  "sources/JavaScriptBreakpointsSidebarPane.js",
  "sources/JavaScriptCompilerPlugin.js",
  "sources/ModuleUIStrings.js",
  "sources/NavigatorView.js",
  "sources/OpenFileQuickOpen.js",
  "sources/OutlineQuickOpen.js",
  "sources/Plugin.js",
  "sources/RecorderPlugin.js",
  "sources/ScopeChainSidebarPane.js",
  "sources/ScriptFormatterEditorAction.js",
  "sources/ScriptOriginPlugin.js",
  "sources/SearchSourcesView.js",
  "sources/SnippetsPlugin.js",
  "sources/SourceMapNamesResolver.js",
  "sources/SourcesNavigator.js",
  "sources/SourcesPanel.js",
  "sources/SourcesSearchScope.js",
  "sources/SourcesView.js",
  "sources/TabbedEditorContainer.js",
  "sources/ThreadsSidebarPane.js",
  "sources/UISourceCodeFrame.js",
  "sources/WatchExpressionsSidebarPane.js",
  "startup/RuntimeInstantiator.js",
  "text_editor/CodeMirrorTextEditor.js",
  "text_editor/SyntaxHighlighter.js",
  "text_editor/TextEditorAutocompleteController.js",
  "text_editor/cm_modes.js",
  "text_utils/CodeMirrorUtils.js",
  "text_utils/ContentProvider.js",
  "text_utils/StaticContentProvider.js",
  "text_utils/Text.js",
  "text_utils/TextCursor.js",
  "text_utils/TextRange.js",
  "text_utils/TextUtils.js",
  "theme_support/theme_support_impl.js",
  "third_party/acorn-loose/package/dist/acorn-loose.mjs",
  "third_party/acorn/package/dist/acorn.mjs",
  "third_party/chromium/client-variations/ClientVariations.js",
  "third_party/codemirror/package/addon/comment/comment.js",
  "third_party/codemirror/package/addon/edit/closebrackets.js",
  "third_party/codemirror/package/addon/edit/matchbrackets.js",
  "third_party/codemirror/package/addon/fold/brace-fold.js",
  "third_party/codemirror/package/addon/fold/foldcode.js",
  "third_party/codemirror/package/addon/fold/foldgutter.js",
  "third_party/codemirror/package/addon/mode/multiplex.js",
  "third_party/codemirror/package/addon/mode/overlay.js",
  "third_party/codemirror/package/addon/mode/simple.js",
  "third_party/codemirror/package/addon/runmode/runmode-standalone.js",
  "third_party/codemirror/package/addon/selection/active-line.js",
  "third_party/codemirror/package/addon/selection/mark-selection.js",
  "third_party/codemirror/package/lib/codemirror.js",
  "third_party/codemirror/package/mode/clike/clike.js",
  "third_party/codemirror/package/mode/clojure/clojure.js",
  "third_party/codemirror/package/mode/coffeescript/coffeescript.js",
  "third_party/codemirror/package/mode/css/css.js",
  "third_party/codemirror/package/mode/htmlembedded/htmlembedded.js",
  "third_party/codemirror/package/mode/htmlmixed/htmlmixed.js",
  "third_party/codemirror/package/mode/javascript/javascript.js",
  "third_party/codemirror/package/mode/jsx/jsx.js",
  "third_party/codemirror/package/mode/livescript/livescript.js",
  "third_party/codemirror/package/mode/markdown/markdown.js",
  "third_party/codemirror/package/mode/php/php.js",
  "third_party/codemirror/package/mode/python/python.js",
  "third_party/codemirror/package/mode/shell/shell.js",
  "third_party/codemirror/package/mode/wast/wast.js",
  "third_party/codemirror/package/mode/xml/xml.js",
  "third_party/i18n/i18n-bundle.js",
  "third_party/lighthouse/report-assets/report-generator.js",
  "third_party/lighthouse/report-assets/report.js",
  "third_party/lit-html/directives.js",
  "third_party/lit-html/package/directives/class-map.js",
  "third_party/lit-html/package/directives/if-defined.js",
  "third_party/lit-html/package/directives/live.js",
  "third_party/lit-html/package/directives/repeat.js",
  "third_party/lit-html/package/directives/style-map.js",
  "third_party/lit-html/package/directives/until.js",
  "third_party/lit-html/package/lib/default-template-processor.js",
  "third_party/lit-html/package/lib/directive.js",
  "third_party/lit-html/package/lib/dom.js",
  "third_party/lit-html/package/lib/part.js",
  "third_party/lit-html/package/lib/parts.js",
  "third_party/lit-html/package/lib/render.js",
  "third_party/lit-html/package/lib/template-factory.js",
  "third_party/lit-html/package/lib/template-instance.js",
  "third_party/lit-html/package/lib/template-result.js",
  "third_party/lit-html/package/lib/template.js",
  "third_party/lit-html/package/lit-html.js",
  "third_party/marked/package/lib/marked.esm.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/api-docs-entry.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Accessibility.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/AriaQueryHandler.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Browser.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/BrowserConnector.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/BrowserWebSocketTransport.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Connection.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/ConnectionTransport.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/ConsoleMessage.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Coverage.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/DOMWorld.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Debug.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/DeviceDescriptors.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Dialog.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/EmulationManager.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Errors.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/EvalTypes.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/EventEmitter.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Events.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/ExecutionContext.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/FileChooser.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/FrameManager.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/HTTPRequest.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/HTTPResponse.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Input.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/JSHandle.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/LifecycleWatcher.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/NetworkManager.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/PDFOptions.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Page.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Product.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Puppeteer.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/PuppeteerViewport.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/QueryHandler.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/SecurityDetails.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Target.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/TimeoutSettings.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/Tracing.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/USKeyboardLayout.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/WebWorker.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/assert.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/fetch.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/common/helper.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/environment.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/initialize-node.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/initialize-web.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/node-puppeteer-core.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/node.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/node/BrowserFetcher.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/node/BrowserRunner.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/node/LaunchOptions.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/node/Launcher.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/node/NodeWebSocketTransport.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/node/PipeTransport.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/node/Puppeteer.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/node/install.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/revisions.js",
  "third_party/puppeteer/package/lib/esm/puppeteer/web.js",
  "third_party/puppeteer/package/lib/esm/vendor/mitt/src/index.js",
  "third_party/wasmparser/package/dist/esm/WasmDis.js",
  "third_party/wasmparser/package/dist/esm/WasmParser.js",
  "timeline/CLSLinkifier.js",
  "timeline/CountersGraph.js",
  "timeline/EventsTimelineTreeView.js",
  "timeline/ExtensionTracingSession.js",
  "timeline/PerformanceModel.js",
  "timeline/TimelineController.js",
  "timeline/TimelineDetailsView.js",
  "timeline/TimelineEventOverview.js",
  "timeline/TimelineFilters.js",
  "timeline/TimelineFlameChartDataProvider.js",
  "timeline/TimelineFlameChartNetworkDataProvider.js",
  "timeline/TimelineFlameChartView.js",
  "timeline/TimelineHistoryManager.js",
  "timeline/TimelineLayersView.js",
  "timeline/TimelineLoader.js",
  "timeline/TimelinePaintProfilerView.js",
  "timeline/TimelinePanel.js",
  "timeline/TimelineTreeView.js",
  "timeline/TimelineUIUtils.js",
  "timeline/UIDevtoolsController.js",
  "timeline/UIDevtoolsUtils.js",
  "timeline/WebVitalsLane.js",
  "timeline/WebVitalsTimeline.js",
  "timeline/WebVitalsTimelineUtils.js",
  "timeline/WebVitalsTooltip.js",
  "timeline_model/TimelineFrameModel.js",
  "timeline_model/TimelineIRModel.js",
  "timeline_model/TimelineJSProfile.js",
  "timeline_model/TimelineModel.js",
  "timeline_model/TimelineModelFilter.js",
  "timeline_model/TimelineProfileTree.js",
  "timeline_model/TracingLayerTree.js",
  "ui/ARIAUtils.js",
  "ui/ActionRegistration.js",
  "ui/ActionRegistry.js",
  "ui/Context.js",
  "ui/ContextFlavorListener.js",
  "ui/ContextMenu.js",
  "ui/Dialog.js",
  "ui/DockController.js",
  "ui/DropTarget.js",
  "ui/EmptyWidget.js",
  "ui/FilterBar.js",
  "ui/FilterSuggestionBuilder.js",
  "ui/ForwardedInputEventHandler.js",
  "ui/Fragment.js",
  "ui/Geometry.js",
  "ui/GlassPane.js",
  "ui/HistoryInput.js",
  "ui/Icon.js",
  "ui/Infobar.js",
  "ui/InplaceEditor.js",
  "ui/InspectorView.js",
  "ui/KeyboardShortcut.js",
  "ui/ListControl.js",
  "ui/ListModel.js",
  "ui/ListWidget.js",
  "ui/Panel.js",
  "ui/PopoverHelper.js",
  "ui/ProgressIndicator.js",
  "ui/RemoteDebuggingTerminatedScreen.js",
  "ui/ReportView.js",
  "ui/ResizerWidget.js",
  "ui/RootView.js",
  "ui/SearchableView.js",
  "ui/SettingsUI.js",
  "ui/ShortcutRegistry.js",
  "ui/SoftContextMenu.js",
  "ui/SoftDropDown.js",
  "ui/SplitWidget.js",
  "ui/SuggestBox.js",
  "ui/TabbedPane.js",
  "ui/TargetCrashedScreen.js",
  "ui/TextEditor.js",
  "ui/TextPrompt.js",
  "ui/ThrottledWidget.js",
  "ui/Toolbar.js",
  "ui/Tooltip.js",
  "ui/Treeoutline.js",
  "ui/UIUtils.js",
  "ui/View.js",
  "ui/ViewManager.js",
  "ui/ViewRegistration.js",
  "ui/Widget.js",
  "ui/XElement.js",
  "ui/XLink.js",
  "ui/XWidget.js",
  "ui/ZoomManager.js",
  "ui/components/DataGrid.js",
  "ui/components/DataGridContextMenuUtils.js",
  "ui/components/DataGridController.js",
  "ui/components/DataGridControllerIntegrator.js",
  "ui/components/DataGridRenderers.js",
  "ui/components/DataGridUtils.js",
  "ui/components/ExpandableList.js",
  "ui/components/Icon.js",
  "ui/components/IconButton.js",
  "ui/components/Linkifier.js",
  "ui/components/LinkifierUtils.js",
  "ui/components/ReportView.js",
  "ui/components/SurveyLink.js",
  "ui/components/TreeOutline.js",
  "ui/components/TreeOutlineUtils.js",
  "ui/components/components.js",
  "ui/utils/append-style.js",
  "ui/utils/create-shadow-root-with-core-styles.js",
  "ui/utils/focus-changed.js",
  "ui/utils/inject-core-styles.js",
  "ui/utils/measured-scrollbar-width.js",
  "ui/utils/register-custom-element.js",
  "ui/utils/utils.js",
  "wasmparser_worker/WasmParserWorker.js",
  "web_audio/AudioContextContentBuilder.js",
  "web_audio/AudioContextSelector.js",
  "web_audio/WebAudioModel.js",
  "web_audio/WebAudioView.js",
  "web_audio/graph_visualizer/EdgeView.js",
  "web_audio/graph_visualizer/GraphManager.js",
  "web_audio/graph_visualizer/GraphStyle.js",
  "web_audio/graph_visualizer/GraphView.js",
  "web_audio/graph_visualizer/NodeRendererUtility.js",
  "web_audio/graph_visualizer/NodeView.js",
  "webauthn/WebauthnPane.js",
  "worker_main/WorkerMain.js",
  "workspace/FileManager.js",
  "workspace/UISourceCode.js",
  "workspace/WorkspaceImpl.js",
  "workspace_diff/WorkspaceDiff.js",
]

foreach(module, all_typescript_module_sources) {
  if (is_debug) {
    generated_typescript_modules +=
        [ "$root_gen_dir/" + devtools_location + "front_end/$module" ]
  }
}
